# game-sdk

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  game-sdk.rc
cfgedit/: CMakeLists.txt  cfgedit.cpp  cfgedit.rc
fonedit/: CMakeLists.txt  fonedit.cpp  fonedit.rc  main.cpp
game_sdk_shared/: CMakeLists.txt
game_sdk_shared/include/game_sdk/: DesktopInterface.h  DialogFilters.h  ModelViewer.h  Options.h  SDKWindow.h  SharedMgr.h  SoundSystem.h
game_sdk_shared/include/game_sdk/gl/: GLHelper.h  GLTextureCache.h
game_sdk_shared/include/game_sdk/windows/: AboutWindow.h  MaterialBrowserWindow.h  ModelBrowserWindow.h  OptionsWindow.h  SetupWindow.h  SoundBrowserWindow.h  TextureBrowserWindow.h
game_sdk_shared/src/: DesktopInterface.cpp  ModelViewer.cpp  Options.cpp  SDKWindow.cpp  SharedMgr.cpp  SoundSystem.cpp
game_sdk_shared/src/gl/: GLDebug.cpp  GLHelper.cpp  GLTextureCache.cpp
game_sdk_shared/src/windows/: AboutWindow.cpp  MaterialBrowserWindow.cpp  ModelBrowserWindow.cpp  OptionsWindow.cpp  SetupWindow.cpp  SoundBrowserWindow.cpp  TextureBrowserWindow.cpp
kvledit/: CMakeLists.txt  kvledit.cpp  kvledit.rc
launcher/: CMakeLists.txt  launcher.cpp  launcher.rc  main.cpp
libassets/: Asset.cpp  AssetReader.cpp  CMakeLists.txt  Color.cpp  Color.h  DataReader.cpp  DataWriter.cpp  LevelAsset.cpp  ModelAsset.cpp  RawAsset.cpp  SoundAsset.cpp  TextureAsset.cpp
libassets/include/libassets/: Asset.h  AssetReader.h  DataReader.h  DataWriter.h  ModelAsset.h  RawAsset.h  SoundAsset.h  TextureAsset.h  libassets.h
libassets/include/libassets/asset/: DataAsset.h  FontAsset.h  GameConfigAsset.h  LevelAsset.h  LevelMaterialAsset.h  MapAsset.h  ModelAsset.h  ShaderAsset.h  SoundAsset.h  TextureAsset.h
libassets/include/libassets/type/: Actor.h  ActorDefinition.h  Asset.h  BoundingBox.h  Color.h  ConvexHull.h  ExpressionParser.h  (+12 more)
libassets/src/asset/: DataAsset.cpp  FontAsset.cpp  GameConfigAsset.cpp  LevelAsset.cpp  LevelMaterialAsset.cpp  MapAsset.cpp  ModelAsset.cpp  ShaderAsset.cpp  SoundAsset.cpp  TextureAsset.cpp
libassets/src/type/: Actor.cpp  ActorDefinition.cpp  BoundingBox.cpp  Color.cpp  ConvexHull.cpp  ExpressionParser.cpp  IOConnection.cpp  LevelMeshBuilder.cpp  LevelMeshBuilder.h  MapVertex.cpp  Material.cpp  ModelLod.cpp  ModelVertex.cpp  OptionDefinition.cpp  Param.cpp  RenderDefinitionValue.cpp  Sector.cpp  SignalDefinition.cpp  StaticCollisionMesh.cpp  WallMaterial.cpp
libassets/src/util/: Actor.cpp  ActorDefinitionManager.cpp  ArgumentParser.cpp  AssetReader.cpp  BoundingBox.cpp  Checksum.cpp  Color.cpp  ConvexHull.cpp  DataReader.cpp  DataWriter.cpp  Error.cpp  IOConnection.cpp  Material.cpp  ModelLod.cpp  ModelVertex.cpp  Param.cpp  SearchPathManager.cpp  Sector.cpp  ShaderCompiler.cpp  StaticCollisionMesh.cpp  WallMaterial.cpp
lvledit/: ActorBrowserWindow.cpp  ActorBrowserWindow.h  CMakeLists.txt  EditActorWindow.cpp  EditActorWindow.h  LevelEditor.cpp  LevelEditor.h  LevelRenderer.cpp  LevelRenderer.h  Viewport.cpp  Viewport.h  lvledit.cpp  lvledit.rc  main.cpp
lvledit/tools/: AddActorTool.cpp  AddActorTool.h  AddPolygonTool.cpp  AddPolygonTool.h  AddPrimitiveTool.cpp  AddPrimitiveTool.h  EditorTool.h  SelectTool.cpp  SelectTool.h  TestTool.cpp  TestTool.h  VertexTool.cpp  VertexTool.h
mapcomp/: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  LevelMeshBuilder.cpp  LevelMeshBuilder.h  Light.h  LightBaker.cpp  LightBaker.hpp  LightBakerCpu.cpp  LightBakerCpu.hpp  LightBakerGpu.cpp  LightBakerGpu.hpp  MapCompiler.cpp  MapCompiler.h  SectorClipper.cpp  SectorClipper.h  SectorCollisionBuilder.cpp  SectorCollisionBuilder.h  mapcomp.cpp  mapcomp.rc
mapdump/: CMakeLists.txt  mapdump.cpp  mapdump.rc
mapedit/: ActorBrowserWindow.cpp  CMakeLists.txt  EditActorWindow.cpp  EditActorWindow.h  MapCompileWindow.cpp  MapCompileWindow.h  MapEditor.cpp  MapEditor.h  MapPropertiesWindow.cpp  MapPropertiesWindow.h  MapRenderer.cpp  MapRenderer.h  Viewport.cpp  Viewport.h  ViewportRenderer.cpp  ViewportRenderer.h  mapedit.cpp  mapedit.rc
mapedit/tools/: AddActorTool.cpp  AddActorTool.h  AddPolygonTool.cpp  AddPolygonTool.h  AddPrimitiveTool.cpp  AddPrimitiveTool.h  EditorTool.h  SelectTool.cpp  SelectTool.h
mdledit/: AboutWindow.cpp  AboutWindow.h  CMakeLists.txt  CollisionEditWindow.cpp  CollisionEditWindow.h  GLDebug.cpp  GLDebug.h  LodEditWindow.cpp  LodEditWindow.h  MaterialEditWindow.cpp  MaterialEditWindow.h  MdleditImGuiTextureCache.h  ModelEditor.cpp  ModelEditor.h  ModelRenderer.cpp  ModelRenderer.h  Options.cpp  OptionsWindow.cpp  OptionsWindow.h  PreviewOptionsWindow.cpp  PreviewOptionsWindow.h  SkinEditWindow.cpp  SkinEditWindow.h  main.cpp  mdledit.cpp  mdledit.rc
mdledit/assets/: cube.frag  cube.vert  model.frag  model.vert
mdledit/tabs/: CollisionTab.cpp  CollisionTab.h  LodEditWindow.cpp  LodsTab.cpp  LodsTab.h  MaterialsTab.cpp  MaterialsTab.h  PreviewOptionsTab.cpp  PreviewOptionsTab.h  SkinsTab.cpp  SkinsTab.h
mtledit/: CMakeLists.txt  mtledit.cpp  mtledit.rc
plugins/gtex_thumbs/: CMakeLists.txt  dev.droc101.gtex_thumbs.metainfo.xml  game-mime-types.xml  gtex_thumbs.cpp  gtex_thumbs.h  gtex_thumbs.json
shared/: AboutWindow.cpp  AboutWindow.h  CMakeLists.txt  DesktopInterface.cpp  DesktopInterface.h  DialogFilters.h  GLHelper.cpp  GLHelper.h  ImGuiTextureAssetCache.cpp  ImGuiTextureAssetCache.h  MaterialBrowserWindow.cpp  MaterialBrowserWindow.h  OpenGLImGuiTextureAssetCache.cpp  OpenGLImGuiTextureAssetCache.h  Options.cpp  Options.h  OptionsWindow.cpp  OptionsWindow.h  SDKWindow.cpp  SDKWindow.h  SDLRendererImGuiTextureAssetCache.cpp  SDLRendererImGuiTextureAssetCache.h  SetupWindow.cpp  SetupWindow.h  SharedMgr.cpp  SharedMgr.h  TextureBrowserWindow.cpp  TextureBrowserWindow.h
shdedit/: BatchCompileWindow.cpp  BatchCompileWindow.h  BatchDecompileWindow.cpp  BatchDecompileWindow.h  CMakeLists.txt  main.cpp  shdedit.cpp  shdedit.rc
sndedit/: CMakeLists.txt  main.cpp  sndedit.cpp  sndedit.rc
tex/: CMakeLists.txt  main.cpp
texedit/: CMakeLists.txt  main.cpp  texedit.cpp  texedit.rc
(+116 files in other folders)
